# tkinter_extensions_project

./: README.md  pyproject.toml  setup.py
examples/: TopListBox.py  icon.py  scroll_frame.py  statusIcon.py  toast.py  top_entry.py  vector_diagram.py
examples/data/: images.py
src/tKot/: __init__.py  buttons.py  common.py  diagram.py  entries.py  frames.py  messagebox.py  pydantic.py  settings.py
test/: for_temp_test.py  test_point.py
