[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tKot"
version = "0.7.18"
authors = [
    {name="Serj Kotilevski", email="youserj@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow>=9.4.0",
    "numpy>=2.1",
    "pydantic>=2.11",
]
keywords=[
    "tkinter",
    "widget",
    "Pydantic UI"
]

[project.urls]
repository = "https://github.com/youserj/tkinter_extensions_project"

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "ruff>=0.11",
    "types-requests",
    "types-Pillow>=10.2.0"
]

[tool.mypy]
exclude = [
    "build/*",
]

strict = true
ignore_missing_imports = true
disallow_any_generics = true
explicit_package_bases = true
python_version = "3.12"
cache_dir = ".mypy_cache"
show_error_codes = true

[tool.ruff]
src = ["src"]
line-length = 180
preview = true
exclude = [
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    "venv",
]
include = [
    "src/tKot/**/*.py",
    "test/test_*.py"
]

[tool.ruff.lint]
    ignore = ["SIM108"]  # ternary
    select = [
        "E", "F", "W", "C", "Q", "ANN", "ARG", "DTZ", "FBT", "NPY", "PGH", "PIE", "SIM", "RET", "TYP", "TCH", "YTT",
        # "TRY",
    ]
    #extend-select = ["D"]
